--- a/views/main.ejs
+++ b/views/main.ejs
@@ -11,7 +11,7 @@
     <!-- navbar -->
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Logo</a>
+      <a href="#" class="brand-logo">POSTer</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="http://localhost/">localhost</a></li>
         <li><a href="http://localhost:3000/">localhost:3000</a></li>
@@ -75,7 +75,7 @@
             
                <div class="row">
                     <div class="input-field col s6">
-                      <input style="color:grey" value="Alvin" id="first_name2" type="text" class="ip validate">
+                      <input style="color:grey" value="Alvin" id="url" type="text" class="ip validate">
                       <label class="active" for="first_name2">URL</label>
                     </div>
                   </div>
@@ -85,8 +85,8 @@
                         <form class="col s12">
                           <div class="row">
                             <div class="input-field col s12">
-                              <textarea id="textarea1" style="color:grey" class="ip materialize-textarea"></textarea>
-                              <label for="textarea1">Body</label>
+                              <textarea id="data" style="color:grey" class="ip materialize-textarea"></textarea>
+                              <label for="data">Body</label>
                             </div>
                           </div>
                         </form>
@@ -97,15 +97,15 @@
                             <form class="col s12">
                               <div class="row">
                                 <div class="input-field col s12">
-                                  <textarea style="color:grey" id="textarea1" class="ip materialize-textarea"></textarea>
-                                  <label for="textarea1">Response</label>
+                                  <textarea style="color:grey" id="response" class="ip materialize-textarea"></textarea>
+                                  <label for="response">Response</label>
                                 </div>
                               </div>
                             </form>
                           </div>
 
                           
-            <center> <a class="waves-effect waves-light btn-small">Send</a></center>
+            <center> <a class="waves-effect waves-light btn-small submit">Send</a></center>
             
     </div>
         
