open links in new tab

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,9 +13,9 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo">POSTer</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="http://localhost/">localhost</a></li>
-        <li><a href="http://localhost:3000/">localhost:3000</a></li>
-        <li><a href="http://localhost:5000/">localhost:5000</a></li>
+        <li><a href="http://localhost/" target="_blank" rel="noopener noreferrer">localhost</a></li>
+        <li><a href="http://localhost:3000/" target="_blank" rel="noopener noreferrer">localhost:3000</a></li>
+        <li><a href="http://localhost:5000/"target="_blank" rel="noopener noreferrer">localhost:5000</a></li>
       </ul>
     </div>
   </nav>
