--- a/views/main.ejs
+++ b/views/main.ejs
@@ -64,22 +64,23 @@
             <div class="method">
                     <div class="input-field col s12">
                             <select style="color:grey">
-                              <option value="" disabled selected>Choose your option</option>
-                              <option value="1">GET</option>
-                              <option value="2">POST</option>
-                              <option value="3">DELETE</option>
+                              <option value="" selected>Choose your option</option>
+                              <option value="1">GET</option> 
+                              <option value="2">POST</option> 
+                              <option value="3">DELETE</option> 
                             </select>
                             <label>Method</label>
-                          </div>            
+                          </div>
                </div>
             
                <div class="row">
-                    <div class="input-field col s6">
+                    <div class="input-field col s6 abc">
                       <input style="color:grey" value="Alvin" id="url" type="text" class="ip validate">
                       <label class="active" for="first_name2">URL</label>
                     </div>
+                    <a class="waves-effect waves-light btn-small submit">Send</a>
                   </div>
-            
+                  
             
                   <div class="row">
                         <form class="col s12">
@@ -102,10 +103,7 @@
                                 </div>
                               </div>
                             </form>
-                          </div>
-
-                          
-            <center> <a class="waves-effect waves-light btn-small submit">Send</a></center>
+                          </div>                          
             
     </div>
         
