--- a/views/main.ejs
+++ b/views/main.ejs
@@ -82,6 +82,20 @@
                   </div>
                   
             
+
+                  <div class="row">
+                    <form class="col s12">
+                      <div class="row">
+                        <div class="input-field col s6">
+                          <input style="color:grey;" placeholder="Key" id="key" type="text" class="keys ip validate">
+                          <label for="key">Headers</label>
+                        </div>
+                        <div class="input-field col s6">
+                          <input  style="color:grey;" placeholder="Value" id="value" type="text" class="values ip validate">
+                          <label for="value"></label>
+                        </div>
+                      </div>
+
                   <div class="row">
                         <form class="col s12">
                           <div class="row">
