--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,6 +7,8 @@
     <title>POSTer</title>
 </head>
 <body>
+    <center> <img src="./images/loading.gif" alt="loading..." class="loading"></center>
+    <div id="main_body" hidden>
 
     <!-- navbar -->
   <nav>
@@ -67,7 +69,7 @@
                               <option value="" selected>Choose your option</option>
                               <option value="1">GET</option> 
                               <option value="2">POST</option> 
-                              <option value="3">DELETE</option> 
+                              <!-- <option value="3">DELETE</option>  -->
                             </select>
                             <label>Method</label>
                           </div>
@@ -82,10 +84,9 @@
                   </div>
                   
             
-
                   <div class="row">
                     <form class="col s12">
-                      <div class="row">
+                      <div class="row header_row">
                         <div class="input-field col s6">
                           <input style="color:grey;" placeholder="Key" id="key" type="text" class="keys ip validate">
                           <label for="key">Headers</label>
@@ -95,6 +96,9 @@
                           <label for="value"></label>
                         </div>
                       </div>
+                      <a class="waves-effect waves-light btn header_button">add</a>                      
+
+
 
                   <div class="row">
                         <form class="col s12">
@@ -123,6 +127,7 @@
         
       
 
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
      <!-- Compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
